fix: Fix wrong color for dark theme
* Fix dark mode accent color.
* Fix username input size not properly working.
* Remove pin icon from text inside favorites.
* Simplified favorites input text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ ul.tabs li {
 
 .username-section input {
   background-color: var(--lighter-color);
-  padding: 13px 10px !important;
+  width: 30%;
   font-size: 15px;
   border: 2px solid var(--sat-setting-bg-effect);
 }
