--- a/css/themes.css
+++ b/css/themes.css
@@ -54,8 +54,8 @@
   --sat-tooltip-bg: #181b22;
   --default-font: "Inter", sans-serif;
   --gudmrning-txt: linear-gradient(to right, #4facfe 0%, #1783e2 100%);
-  --sat-accent-color1: hsl(208, 53%, 31%);
-  --moreapps-hovering-clr: hsl(208, 53%, 31%);
+  --sat-accent-color1: hsl(208, 67%, 56%);
+  --moreapps-hovering-clr: hsl(208, 67%, 56%);
   --favorites-hover: #232931;
   --for-white: #ffffff;
   --settings-warning-bg: rgba(255, 255, 0, 0.075);
